<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Free Assistant</string>
    <string name="run">Run</string>
    <string name="commands">Commands</string>
    <string name="main_hint">Try: Index my photos, please</string>
    <string name="ready">Ready.</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="navigation_drawer_open">Open sidebar</string>
    <string name="navigation_drawer_close">Close sidebar</string>
    <string name="auto_index_photos">Automatic photo indexing</string>
    <string name="auto_index_time">Auto-index time: %1$s</string>
    <string name="choose_time">Choose time</string>
    <string name="speech_output">Speak results</string>
    <string name="voice">Voice</string>
    <string name="voice_female">Female</string>
    <string name="voice_male">Male</string>
    <string name="speak_command">Say a command</string>
    <string name="mic_description">Voice input</string>
    <string name="openweather_api_key">OpenWeatherMap API key</string>
    <string name="openweather_api_key_hint">Enter API key</string>
    <string name="input_hint">Message</string>
    <string name="greeting">Hi! Type a command or tap the microphone.</string>
</resources>
